[project]
name = "kblog"
version = "0.1.0"
description = "My blog"
authors = [
    {name = "Kai Norman Clasen", email = "k.clasen@protonmail.com"},
]
dependencies = [
    "myst-parser>=0.18.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    # "jupyter>=1.0.0",
    # "ipykernel>=6.15.0",
    "sphinx-theme-builder[cli]>=0.2.0a15",
    "sphinx-external-toc>=0.3.0",
]

[tool.sphinx-theme-builder]
node-version = "18.4.0"
theme-name = "kblog"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
# requires = ["sphinx-theme-builder >= 0.2.0a15"]
# build-backend = "sphinx_theme_builder"

# allows sphinx to find the theme!
[project.entry-points]
"sphinx.html_themes" = {kblog = "kblog"}
